Fix white space on right side of page

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
 
     <div class="row text-center">
-        <div class="col border_top_5 h5 py-4 my-auto text-light" style="background-color:black" id="middle_banner_text">
+        <div class="col border_top_5 h5 py-4 px-0 my-auto text-light" style="background-color:black" id="middle_banner_text">
             <span class="text-warning" id="main_description">KING ROY</span> - ИЗВЕСТНЫЙ МИРОВОЙ БРЕНД, ПРОИЗВЕДЕННЫЙ В
             ТАЙВАНЕ.
         </div>
@@ -171,7 +171,7 @@
     </div>
 
     <div class="row border_top_5 py-5 text-center" id="footer" style="background-color:black">
-        <div class="col">
+        <div class="col px-0">
             <a class="btn h4 btn-warning text-secondery shadow rounded font-weight-bold" href="https://kingavto.com.ua/"
                 target="_blank">Интернет-магазин</a>
         </div>
@@ -203,7 +203,7 @@
                     </table>
                 </div>
             </div>
-            <div class="col text-right fixed-bottom pb-3 pr-4">
+            <div class="col text-right fixed-bottom pb-3 pr-2">
                 <a class="text-warning" href="#header"><i class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
             </div>
         </div>
