Fix middle banner text

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
 
     <div class="row text-center">
-        <div class="col border_top_5 h5 py-4 px-0 my-auto text-light" style="background-color:black" id="middle_banner_text">
+        <div class="col border_top_5 h5 py-4 my-auto text-light" style="background-color:black" id="middle_banner_text">
             <span class="text-warning" id="main_description">KING ROY</span> - ИЗВЕСТНЫЙ МИРОВОЙ БРЕНД, ПРОИЗВЕДЕННЫЙ В
             ТАЙВАНЕ.
         </div>
