--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
                     </table>
                 </div>
             </div>
-            <div class="col text-right fixed-bottom pb-3 pr-2">
-                <a class="text-warning" href="#header"><i class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
+            <div class="col text-right fixed-bottom pb-3 pr-4">
+                <a class="text-dark" href="#header"><i class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
             </div>
         </div>
     </div>
@@ -218,6 +218,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="src/index.js"></script>
 </body>
 
 </html>
