Fix move top btn

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 </div>
             </div>
             <div class="col text-right fixed-bottom pb-3 pr-4">
-                <a class="text-dark" href="#header"><i class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
+                <a class="text-warning" onclick="topFunction()" href="#" id="move_top_btn"><i class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
             </div>
         </div>
     </div>
