--- a/index.html
+++ b/index.html
@@ -204,10 +204,16 @@
                 </div>
             </div>
             <div class="col text-right fixed-bottom pb-3 pr-4">
-                <a class="text-warning" onclick="topFunction()" href="#" id="move_top_btn"><i class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
+                <a class="d-block text-warning" onclick="topFunction()" href="#" id="move_top_btn"><i class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
             </div>
         </div>
     </div>
+    
+    <!--<div class="btn" id="btn_top">
+        <i class="fas fa-arrow-alt-circle-up fa-3x"></i>
+    </div>-->
+
+    <!--<button onclick="topFunction()" id="move_top_btn">Вверх</button>-->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
