--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12 ml-5 d-none d-md-block d-xl-block">
                                 <a href="pdf/test.pdf"
-                                    class="btn btn-warning ml-md-5 mt-md-5 text-secondery shadow rounded font-weight-bold"
+                                    class="btn btn-warning ml-md-5 mt-md-4 mt-lg-5 text-secondery shadow rounded font-weight-bold"
                                     target="_blank" id="catalog_btn">КАТАЛОГ
                                     ИНСТРУМЕНТОВ<i class="fas fa-angle-double-right pl-2 text-dark"></i></a>
                             </div>
@@ -178,16 +178,17 @@
     </div>
 
     <div class="container-fluid bg-secondary">
-        <div class="row text-left pb-5 pt-4" style="height: 525px">
-            <div class="col-auto">
+        <div class="row text-left pb-5 pt-4 justify-content-center" style="height: 525px">
+            <!--<div class="col-auto">
                 <p class="h4 text-warning">
                     По вопросам оптовых закупок:
                 </p>
-            </div>
+            </div>-->
             <div class="col-auto">
                 <div class="table-responsive">
                     <table class="table table-borderless table-sm h5">
                         <tbody>
+                            <caption class="h4 text-warning" style="caption-side: top">По вопросам оптовых закупок:</caption>
                             <tr>
                                 <td class="text-light">Официальный представитель в Украине</td>
                                 <td class="pl-5 text-warning">info.kingroy@gmail.com</td>
@@ -204,13 +205,13 @@
                 </div>
             </div>
             <div class="col text-right fixed-bottom pb-3 pr-4">
-                <a class="d-block text-warning" onclick="topFunction()" href="#" id="move_top_btn"><i class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
+                <a class="d-block text-warning" onclick="topFunction()" href="#" id="btn_top"><i class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
             </div>
         </div>
     </div>
     
-    <!--<div class="btn" id="btn_top">
-        <i class="fas fa-arrow-alt-circle-up fa-3x"></i>
+    <!--<div onclick="topFunction()" id="btn-top">
+        Наверх
     </div>-->
 
     <!--<button onclick="topFunction()" id="move_top_btn">Вверх</button>-->
