--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             бренда<i class="fas fa-angle-double-right px-2 text-warning"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a href="pdf/test.pdf" class="nav-link pr-0 text-warning font-weight-bold bg-dark"
+                        <a href="pdf/Katalog King_Roy.pdf" class="nav-link pr-0 text-warning font-weight-bold bg-dark"
                             target="_blank">Каталог инструментов<i
                                 class="fas fa-angle-double-right px-2 text-warning"></i></a>
                     </li>
