Update search description

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KING ROY - известный мировой бренд, произведенный в Тайване</title>
+    <title>KING ROY | Официальный представитель в Украине</title>
     <meta name="description"
-        content="Инструмент KING ROY – это не просто высококачественный и надёжный инструмент, это уникальные комплексные решения для ремонта и обслуживания автомобилей. Главный принцип нашей компании – профессиональный инструмент не должен быть роскошью">
+        content="Профессиональный инструмент KING ROY и оборудование для автосервиса. Официальный представитель в Украине. Широкий ассортимент. Инструмент для СТО. Низкие цены, высокое качество.">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
