--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                 <img src="./img/Logo.png" class="img-fluid" alt="">
             </div>
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 px-0">
-                <div class="col-md-12 h3 bg-secondary pl-4 py-2 text-left d-none d-sm-block" id="header_right_text">PROFESSIONAL TOOLS</div>
+                <div class="col-md-12 h3 bg-secondary pl-4 py-2 text-left d-none d-sm-block" id="header_right_text">
+                    PROFESSIONAL TOOLS</div>
             </div>
         </div>
     </div>
@@ -172,8 +173,7 @@
 
     <div class="row border_top_5 py-5 text-center" id="footer" style="background-color:black">
         <div class="col px-0">
-            <a class="btn h4 btn-warning text-secondery shadow rounded font-weight-bold" href="https://kingavto.com.ua/"
-                target="_blank">Интернет-магазин</a>
+
         </div>
     </div>
 
@@ -188,7 +188,8 @@
                 <div class="table-responsive">
                     <table class="table table-borderless table-sm h5">
                         <tbody>
-                            <caption class="h4 text-warning" style="caption-side: top">По вопросам оптовых закупок:</caption>
+                            <caption class="h4 text-warning" style="caption-side: top">По вопросам оптовых закупок:
+                            </caption>
                             <tr>
                                 <td class="text-light">Официальный представитель в Украине</td>
                                 <td class="pl-5 text-warning">info.kingroy@gmail.com</td>
@@ -201,15 +202,25 @@
                                 <td class="text-light">Представительство в Тайване</td>
                                 <td class="pl-5 text-warning">info@kingroy.tw</td>
                             </tr>
+                            <tr>
+                                <td class="text-warning h4 pt-4">
+                                    Для розничных покупателей:
+                                </td>
+                                <td class="text-center pt-4 pl-5">
+                                    <a class="btn h4 btn-warning text-secondery shadow rounded font-weight-bold w-100"
+                                        href="https://kingavto.com.ua/catalog/instrument" target="_blank">Интернет-магазин</a>
+                                </td>
+                            </tr>
                     </table>
                 </div>
             </div>
             <div class="col text-right fixed-bottom pb-3 pr-4">
-                <a class="d-block text-warning" onclick="topFunction()" href="#" id="btn_top"><i class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
+                <a class="d-block text-warning" onclick="topFunction()" href="#" id="btn_top"><i
+                        class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
             </div>
         </div>
     </div>
-    
+
     <!--<div onclick="topFunction()" id="btn-top">
         Наверх
     </div>-->
