--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                 </div>
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12 ml-5 d-none d-md-block d-xl-block">
-                                <a href="pdf/test.pdf"
+                                <a href="pdf/Katalog King_Roy.pdf"
                                     class="btn btn-warning ml-md-5 mt-md-4 mt-lg-5 text-secondery shadow rounded font-weight-bold"
                                     target="_blank" id="catalog_btn">КАТАЛОГ
                                     ИНСТРУМЕНТОВ<i class="fas fa-angle-double-right pl-2 text-dark"></i></a>
