Update main title text style

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="container">
                             <div class="row text-center">
                                 <div
-                                    class="col-md-12 col-sm-12 col-xs-12 pt-md-5 pb-4 border_bottom_2 display-4 top_banner font-weight-bold">
+                                    class="col-md-12 col-sm-12 col-xs-12 pt-md-5 pb-4 text-warning border_bottom_2 display-4 top_banner font-weight-bold">
                                     ИНСТРУМЕНТ ДЛЯ ПРОФЕССИОНАЛОВ
                                 </div>
                             </div>
