Update elements color

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
             <div class="collapse navbar-collapse" id="navbarToggler">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="#main_description" class="nav-link pr-0 text-warning font-weight-bold bg-dark">Описание
-                            бренда<i class="fas fa-angle-double-right px-2 text-warning"></i></a>
+                        <a href="#main_description" class="nav-link pr-0 oranged_color font-weight-bold bg-dark">Описание
+                            бренда<i class="fas fa-angle-double-right px-2 oranged_color"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a href="pdf/Katalog King_Roy.pdf" class="nav-link pr-0 text-warning font-weight-bold bg-dark"
+                        <a href="pdf/Katalog King_Roy.pdf" class="nav-link pr-0 oranged_color font-weight-bold bg-dark"
                             target="_blank">Каталог инструментов<i
-                                class="fas fa-angle-double-right px-2 text-warning"></i></a>
+                                class="fas fa-angle-double-right px-2 oranged_color"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a href="#footer" class="nav-link pr-0 text-warning font-weight-bold bg-dark">Контакты<i
-                                class="fas fa-angle-double-right px-2 text-warning"></i></a>
+                        <a href="#footer" class="nav-link pr-0 oranged_color font-weight-bold bg-dark">Контакты<i
+                                class="fas fa-angle-double-right px-2 oranged_color"></i></a>
                     </li>
                 </ul>
             </div>
@@ -66,13 +66,13 @@
                         <div class="container">
                             <div class="row text-center">
                                 <div
-                                    class="col-md-12 col-sm-12 col-xs-12 pt-md-5 pb-4 text-warning border_bottom_2 display-4 top_banner font-weight-bold">
+                                    class="col-md-12 col-sm-12 col-xs-12 pt-md-5 pb-4 oranged_color border_bottom_2 display-4 top_banner font-weight-bold">
                                     ИНСТРУМЕНТ ДЛЯ ПРОФЕССИОНАЛОВ
                                 </div>
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12 ml-5 d-none d-md-block d-xl-block">
                                 <a href="pdf/Katalog King_Roy.pdf"
-                                    class="btn btn-warning ml-md-5 mt-md-4 mt-lg-5 text-secondery shadow rounded font-weight-bold"
+                                    class="btn bg_oranged ml-md-5 mt-md-4 mt-lg-5 text-secondery shadow rounded font-weight-bold"
                                     target="_blank" id="catalog_btn">КАТАЛОГ
                                     ИНСТРУМЕНТОВ<i class="fas fa-angle-double-right pl-2 text-dark"></i></a>
                             </div>
@@ -85,7 +85,7 @@
 
     <div class="row text-center">
         <div class="col border_top_5 h5 py-4 my-auto text-light" style="background-color:black" id="middle_banner_text">
-            <span class="text-warning" id="main_description">KING ROY</span> - ИЗВЕСТНЫЙ МИРОВОЙ БРЕНД, ПРОИЗВЕДЕННЫЙ В
+            <span class="oranged_color" id="main_description">KING ROY</span> - ИЗВЕСТНЫЙ МИРОВОЙ БРЕНД, ПРОИЗВЕДЕННЫЙ В
             ТАЙВАНЕ.
         </div>
     </div>
@@ -188,26 +188,26 @@
                 <div class="table-responsive">
                     <table class="table table-borderless table-sm h5">
                         <tbody>
-                            <caption class="h4 text-warning" style="caption-side: top">По вопросам оптовых закупок:
+                            <caption class="h4 oranged_color" style="caption-side: top">По вопросам оптовых закупок:
                             </caption>
                             <tr>
                                 <td class="text-light">Официальный представитель в Украине</td>
-                                <td class="pl-5 text-warning">info.kingroy@gmail.com</td>
+                                <td class="pl-5 oranged_color">info.kingroy@gmail.com</td>
                             </tr>
                             <tr>
                                 <td class="text-light">Представительство в ОАЭ</td>
-                                <td class="pl-5 text-warning">king_w@emirates.net.ae</td>
+                                <td class="pl-5 oranged_color">king_w@emirates.net.ae</td>
                             </tr>
                             <tr>
                                 <td class="text-light">Представительство в Тайване</td>
-                                <td class="pl-5 text-warning">info@kingroy.tw</td>
+                                <td class="pl-5 oranged_color">info@kingroy.tw</td>
                             </tr>
                             <tr>
-                                <td class="text-warning h4 pt-4">
+                                <td class="oranged_color h4 pt-4">
                                     Для розничных покупателей:
                                 </td>
                                 <td class="text-center pt-4 pl-5">
-                                    <a class="btn h4 btn-warning text-secondery shadow rounded font-weight-bold w-100"
+                                    <a class="btn h4 bg_oranged text-secondery shadow rounded font-weight-bold w-100"
                                         href="https://kingavto.com.ua/catalog/instrument" target="_blank">Интернет-магазин</a>
                                 </td>
                             </tr>
@@ -215,7 +215,7 @@
                 </div>
             </div>
             <div class="col text-right fixed-bottom pb-3 pr-4">
-                <a class="d-block text-warning" onclick="topFunction()" href="#" id="btn_top"><i
+                <a class="d-block oranged_color" onclick="topFunction()" href="#" id="btn_top"><i
                         class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
             </div>
         </div>
