Add some updates

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="card border-0">
                 <img src="img/background_img.png" class="card-img" alt="">
                 <div class="card-img-overlay">
-                    <p class="card-text">
+                    <!--<p class="card-text">-->
                         <div class="container">
                             <div class="row text-center">
                                 <div
@@ -72,12 +72,12 @@
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12 ml-5 d-none d-md-block d-xl-block">
                                 <a href="pdf/Katalog King_Roy.pdf"
-                                    class="btn bg_oranged ml-md-5 mt-md-4 mt-lg-5 text-secondery shadow rounded font-weight-bold"
+                                    class="btn bg_oranged shadow ml-md-5 mt-md-4 mt-lg-5 text-secondery shadow rounded font-weight-bold"
                                     target="_blank" id="catalog_btn">КАТАЛОГ
                                     ИНСТРУМЕНТОВ<i class="fas fa-angle-double-right pl-2 text-dark"></i></a>
                             </div>
                         </div>
-                    </p>
+                    <!--</p>-->
                 </div>
             </div>
         </div>
