Add some updates

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <div class="collapse navbar-collapse" id="navbarToggler">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="#main_description" class="nav-link pr-0 oranged_color font-weight-bold bg-dark">Описание
+                        <a href="#main_description"
+                            class="nav-link pr-0 oranged_color font-weight-bold bg-dark">Описание
                             бренда<i class="fas fa-angle-double-right px-2 oranged_color"></i></a>
                     </li>
                     <li class="nav-item">
@@ -62,22 +63,20 @@
             <div class="card border-0">
                 <img src="img/background_img.png" class="card-img" alt="">
                 <div class="card-img-overlay">
-                    <!--<p class="card-text">-->
-                        <div class="container">
-                            <div class="row text-center">
-                                <div
-                                    class="col-md-12 col-sm-12 col-xs-12 pt-md-5 pb-4 oranged_color border_bottom_2 display-4 top_banner font-weight-bold">
-                                    ИНСТРУМЕНТ ДЛЯ ПРОФЕССИОНАЛОВ
-                                </div>
-                            </div>
-                            <div class="col-md-12 col-sm-12 col-xs-12 ml-5 d-none d-md-block d-xl-block">
-                                <a href="pdf/Katalog King_Roy.pdf"
-                                    class="btn bg_oranged shadow ml-md-5 mt-md-4 mt-lg-5 text-secondery shadow rounded font-weight-bold"
-                                    target="_blank" id="catalog_btn">КАТАЛОГ
-                                    ИНСТРУМЕНТОВ<i class="fas fa-angle-double-right pl-2 text-dark"></i></a>
+                    <div class="container">
+                        <div class="row text-center">
+                            <div
+                                class="col-md-12 col-sm-12 col-xs-12 pt-md-5 pb-4 oranged_color border_bottom_2 display-4 top_banner font-weight-bold">
+                                ИНСТРУМЕНТ ДЛЯ ПРОФЕССИОНАЛОВ
                             </div>
                         </div>
-                    <!--</p>-->
+                        <div class="col-md-12 col-sm-12 col-xs-12 ml-5 d-none d-md-block d-xl-block">
+                            <a href="pdf/Katalog King_Roy.pdf"
+                                class="btn bg_oranged shadow ml-md-5 mt-md-4 mt-lg-5 text-secondery shadow rounded font-weight-bold"
+                                target="_blank" id="catalog_btn">КАТАЛОГ
+                                ИНСТРУМЕНТОВ<i class="fas fa-angle-double-right pl-2 text-dark"></i></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -208,7 +207,8 @@
                                 </td>
                                 <td class="text-center pt-4 pl-5">
                                     <a class="btn h4 bg_oranged text-secondery shadow rounded font-weight-bold w-100"
-                                        href="https://kingavto.com.ua/catalog/instrument" target="_blank">Интернет-магазин</a>
+                                        href="https://kingavto.com.ua/catalog/instrument"
+                                        target="_blank">Интернет-магазин</a>
                                 </td>
                             </tr>
                     </table>
