Update contacts style in footer

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="container">
                         <div class="row text-center">
                             <div
-                                class="col-md-12 col-sm-12 col-xs-12 pt-md-5 pb-4 oranged_color border_bottom_2 display-4 top_banner font-weight-bold">
+                                class="col-md-12 col-sm-12 col-xs-12 pt-md-5 pb-4 oranged_color border_bottom_2 display-4 top_banner black_text_shadow font-weight-bold">
                                 ИНСТРУМЕНТ ДЛЯ ПРОФЕССИОНАЛОВ
                             </div>
                         </div>
@@ -176,56 +176,52 @@
         </div>
     </div>
 
-    <div class="container-fluid bg-secondary">
-        <div class="row text-left pb-5 pt-4 justify-content-center" style="height: 525px">
-            <!--<div class="col-auto">
-                <p class="h4 text-warning">
-                    По вопросам оптовых закупок:
-                </p>
-            </div>-->
-            <div class="col-auto">
-                <div class="table-responsive">
-                    <table class="table table-borderless table-sm h5">
-                        <tbody>
-                            <caption class="h4 oranged_color" style="caption-side: top">По вопросам оптовых закупок:
-                            </caption>
-                            <tr>
-                                <td class="text-light">Официальный представитель в Украине</td>
-                                <td class="pl-5 oranged_color">info.kingroy@gmail.com</td>
-                            </tr>
-                            <tr>
-                                <td class="text-light">Представительство в ОАЭ</td>
-                                <td class="pl-5 oranged_color">king_w@emirates.net.ae</td>
-                            </tr>
-                            <tr>
-                                <td class="text-light">Представительство в Тайване</td>
-                                <td class="pl-5 oranged_color">info@kingroy.tw</td>
-                            </tr>
-                            <tr>
-                                <td class="oranged_color h4 pt-4">
-                                    Для розничных покупателей:
-                                </td>
-                                <td class="text-center pt-4 pl-5">
-                                    <a class="btn h4 bg_oranged text-secondery shadow rounded font-weight-bold w-100"
-                                        href="https://kingavto.com.ua/catalog/instrument"
-                                        target="_blank">Интернет-магазин</a>
-                                </td>
-                            </tr>
-                    </table>
-                </div>
+    <div class="container-fluid pl-5 bg-secondary">
+        <div class="row pt-4 pb-1 pl-5">
+            <div class="col-12 col-md-6 h4 oranged_color black_text_shadow">
+                По вопросам оптовых закупок:
             </div>
+        </div>
+        <div class="row h5 py-1 pl-5 black_text_shadow">
+            <div class="col-12 col-md-4 text-light">
+                Официальный представитель в Украине
+            </div>
+            <div class="col-12 col-md-4 oranged_color">
+                info.kingroy@gmail.com
+            </div>
+        </div>
+        <div class="row h5 py-1 pl-5 black_text_shadow">
+            <div class="col-12 col-md-4 text-light">
+                Представительство в ОАЭ
+            </div>
+            <div class="col-12 col-md-4 oranged_color">
+                king_w@emirates.net.ae
+            </div>
+        </div>
+        <div class="row h5 py-1 pl-5 black_text_shadow">
+            <div class="col-12 col-md-4 text-light">
+                Представительство в Тайване
+            </div>
+            <div class="col-12 col-md-4 oranged_color">
+                info@kingroy.tw
+            </div>
+        </div>
+        <div class="row py-2 pl-5">
+            <div class="col-12 col-md-4 h4 oranged_color black_text_shadow">
+                Для розничных покупателей:
+            </div>
+            <div class="col-12 col-md-4 text-warning">
+                <a class="btn h4 bg_oranged text-secondery shadow rounded font-weight-bold"
+                    href="https://kingavto.com.ua/catalog/instrument" target="_blank" style="width: 220px">Интернет-магазин</a>
+            </div>
+        </div>
+        <div class="row pb-5 pt-4" style="height: 525px">
             <div class="col text-right fixed-bottom pb-3 pr-4">
                 <a class="d-block oranged_color" onclick="topFunction()" href="#" id="btn_top"><i
                         class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
             </div>
         </div>
     </div>
-
-    <!--<div onclick="topFunction()" id="btn-top">
-        Наверх
-    </div>-->
-
-    <!--<button onclick="topFunction()" id="move_top_btn">Вверх</button>-->
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
