Fix contacts style in footer

--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@
         </div>
     </div>
 
-    <div class="container-fluid pl-5 bg-secondary">
-        <div class="row pt-4 pb-1 pl-5">
+    <div class="container-fluid pl-md-5 bg-secondary">
+        <div class="row pt-4 pb-1 pl-md-5">
             <div class="col-12 col-md-6 h4 oranged_color black_text_shadow">
                 По вопросам оптовых закупок:
             </div>
         </div>
-        <div class="row h5 py-1 pl-5 black_text_shadow">
+        <div class="row h5 py-1 pl-md-5 black_text_shadow">
             <div class="col-12 col-md-4 text-light">
                 Официальный представитель в Украине
             </div>
@@ -190,7 +190,7 @@
                 info.kingroy@gmail.com
             </div>
         </div>
-        <div class="row h5 py-1 pl-5 black_text_shadow">
+        <div class="row h5 py-1 pl-md-5 black_text_shadow">
             <div class="col-12 col-md-4 text-light">
                 Представительство в ОАЭ
             </div>
@@ -198,7 +198,7 @@
                 king_w@emirates.net.ae
             </div>
         </div>
-        <div class="row h5 py-1 pl-5 black_text_shadow">
+        <div class="row h5 py-1 pl-md-5 black_text_shadow">
             <div class="col-12 col-md-4 text-light">
                 Представительство в Тайване
             </div>
@@ -206,7 +206,7 @@
                 info@kingroy.tw
             </div>
         </div>
-        <div class="row py-2 pl-5">
+        <div class="row py-2 pl-md-5">
             <div class="col-12 col-md-4 h4 oranged_color black_text_shadow">
                 Для розничных покупателей:
             </div>
