Fix footer height

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     href="https://kingavto.com.ua/catalog/instrument" target="_blank" style="width: 220px">Интернет-магазин</a>
             </div>
         </div>
-        <div class="row pb-5 pt-4" style="height: 525px">
+        <div class="row" style="height: 300px">
             <div class="col text-right fixed-bottom pb-3 pr-4">
                 <a class="d-block oranged_color" onclick="topFunction()" href="#" id="btn_top"><i
                         class="fas fa-arrow-alt-circle-up fa-3x"></i></a>
