Fix contacts style in footer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>KING ROY | Официальный представитель в Украине</title>
     <meta name="description"
         content="Профессиональный инструмент KING ROY и оборудование для автосервиса. Официальный представитель в Украине. Широкий ассортимент. Инструмент для СТО. Низкие цены, высокое качество.">
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <meta name="keywords" content="King Roy">
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -61,7 +62,7 @@
     <div class="row">
         <div class="col-lg-12 px-0">
             <div class="card border-0">
-                <img src="img/background_img.png" class="card-img" alt="">
+                <img src="img/background_img.png" class="card-img" alt="kingroy">
                 <div class="card-img-overlay">
                     <div class="container">
                         <div class="row text-center">
@@ -178,11 +179,11 @@
 
     <div class="container-fluid pl-md-5 bg-secondary">
         <div class="row pt-4 pb-1 pl-md-5">
-            <div class="col-12 col-md-6 h4 oranged_color black_text_shadow">
+            <div class="col-12 col-md-6 h4 oranged_color">
                 По вопросам оптовых закупок:
             </div>
         </div>
-        <div class="row h5 py-1 pl-md-5 black_text_shadow">
+        <div class="row h5 py-1 pl-md-5">
             <div class="col-12 col-md-4 text-light">
                 Официальный представитель в Украине
             </div>
@@ -190,7 +191,7 @@
                 info.kingroy@gmail.com
             </div>
         </div>
-        <div class="row h5 py-1 pl-md-5 black_text_shadow">
+        <div class="row h5 py-1 pl-md-5">
             <div class="col-12 col-md-4 text-light">
                 Представительство в ОАЭ
             </div>
@@ -198,7 +199,7 @@
                 king_w@emirates.net.ae
             </div>
         </div>
-        <div class="row h5 py-1 pl-md-5 black_text_shadow">
+        <div class="row h5 py-1 pl-md-5">
             <div class="col-12 col-md-4 text-light">
                 Представительство в Тайване
             </div>
@@ -207,7 +208,7 @@
             </div>
         </div>
         <div class="row py-2 pl-md-5">
-            <div class="col-12 col-md-4 h4 oranged_color black_text_shadow">
+            <div class="col-12 col-md-4 h4 oranged_color">
                 Для розничных покупателей:
             </div>
             <div class="col-12 col-md-4 text-warning">
