--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     PROFESSIONAL TOOLS</div>
             </div>
             <div class="col-lg-2 col-md-2 col-sm-2 col px-0 text-center">
-                <img src="./img/Logo.png" class="img-fluid" alt="">
+                <img src="./img/kingroy_logo.png" class="img-fluid" alt="логотип kingroy">
             </div>
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 px-0">
                 <div class="col-md-12 h3 bg-secondary pl-4 py-2 text-left d-none d-sm-block" id="header_right_text">
@@ -62,7 +62,7 @@
     <div class="row">
         <div class="col-lg-12 px-0">
             <div class="card border-0">
-                <img src="img/background_img.png" class="card-img" alt="kingroy">
+                <img src="img/kingroy_instruments.jpg" class="card-img" alt="ассортимент инструментов kingroy">
                 <div class="card-img-overlay">
                     <div class="container">
                         <div class="row text-center">
@@ -223,6 +223,12 @@
             </div>
         </div>
     </div>
+
+    <script type="application/ld+json">
+        {
+
+        }
+    </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
