Add contacts structured data

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="Профессиональный инструмент KING ROY и оборудование для автосервиса. Официальный представитель в Украине. Широкий ассортимент. Инструмент для СТО. Низкие цены, высокое качество.">
     <meta name="keywords" content="King Roy">
-        <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -213,7 +213,8 @@
             </div>
             <div class="col-12 col-md-4 text-warning">
                 <a class="btn h4 bg_oranged text-secondery shadow rounded font-weight-bold"
-                    href="https://kingavto.com.ua/catalog/instrument" target="_blank" style="width: 220px">Интернет-магазин</a>
+                    href="https://kingavto.com.ua/catalog/instrument" target="_blank"
+                    style="width: 220px">Интернет-магазин</a>
             </div>
         </div>
         <div class="row" style="height: 300px">
@@ -226,7 +227,10 @@
 
     <script type="application/ld+json">
         {
-
+            "@context": "https://schema.org",
+            "@type": "Organization",
+            "url": "http://kingroy.com.ua",
+            "logo": "http://kingroy.com.ua/img/kingroy_logo.png"
         }
     </script>
 
