Update contacts structured data

--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
         {
             "@context": "https://schema.org",
             "@type": "Organization",
-            "url": "http://kingroy.com.ua",
-            "logo": "http://kingroy.com.ua/img/kingroy_logo.png"
+            "url": "http://dluga.github.io",
+            "logo": "http://dluga.github.io/img/kingroy_logo.png"
         }
     </script>
 
