Update contacts structured data

--- a/index.html
+++ b/index.html
@@ -230,7 +230,20 @@
             "@context": "https://schema.org",
             "@type": "Organization",
             "url": "http://dluga.github.io",
-            "logo": "http://dluga.github.io/img/kingroy_logo.png"
+            "logo": "http://dluga.github.io/img/kingroy_logo.png",
+            "contactPoint": [{
+                "@type": "ContactPoint",
+                "email": "info.kingroy@gmail.com",
+                "contactType": "sales"
+              },{
+                "@type": "ContactPoint",
+                "email": "king_w@emirates.net.ae",
+                "contactType": "sales"
+              },{
+                "@type": "ContactPoint",
+                "email": "info@kingroy.tw",
+                "contactType": "sales"
+              }]
         }
     </script>
 
