Update contacts data structure

--- a/index.html
+++ b/index.html
@@ -234,15 +234,15 @@
             "contactPoint": [{
                 "@type": "ContactPoint",
                 "email": "info.kingroy@gmail.com",
-                "contactType": "sales"
+                "contactType": "customer support"
               },{
                 "@type": "ContactPoint",
                 "email": "king_w@emirates.net.ae",
-                "contactType": "sales"
+                "contactType": "customer support"
               },{
                 "@type": "ContactPoint",
                 "email": "info@kingroy.tw",
-                "contactType": "sales"
+                "contactType": "customer support"
               }]
         }
     </script>
