Update contacts structured data

--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
         {
             "@context": "https://schema.org",
             "@type": "Organization",
+            "name": "King Roy",
             "url": "http://dluga.github.io",
             "logo": "http://dluga.github.io/img/kingroy_logo.png",
             "contactPoint": [{
