Update contacts structured data

--- a/index.html
+++ b/index.html
@@ -230,21 +230,9 @@
             "@context": "https://schema.org",
             "@type": "Organization",
             "name": "King Roy",
-            "url": "http://dluga.github.io",
-            "logo": "http://dluga.github.io/img/kingroy_logo.png",
-            "contactPoint": [{
-                "@type": "ContactPoint",
-                "email": "info.kingroy@gmail.com",
-                "contactType": "customer support"
-              },{
-                "@type": "ContactPoint",
-                "email": "king_w@emirates.net.ae",
-                "contactType": "customer support"
-              },{
-                "@type": "ContactPoint",
-                "email": "info@kingroy.tw",
-                "contactType": "customer support"
-              }]
+            "url": "http://kingroy.com.ua",
+            "logo": "http://kingroy.com.ua/img/kingroy_logo.png",
+            "email": "info.kingroy@gmail.com",
         }
     </script>
 
