Fix contacts structured data

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             "name": "King Roy",
             "url": "http://kingroy.com.ua",
             "logo": "http://kingroy.com.ua/img/kingroy_logo.png",
-            "email": "info.kingroy@gmail.com",
+            "email": "info.kingroy@gmail.com"
         }
     </script>
 
