--- a/index.html
+++ b/index.html
@@ -62,7 +62,12 @@
     <div class="row">
         <div class="col-lg-12 px-0">
             <div class="card border-0">
-                <img src="img/kingroy_instruments.jpg" class="card-img" alt="ассортимент инструментов kingroy">
+                <picture>
+                    <source srcset="img/kingroy_instruments.webp" type="image/webp">
+                    <source srcset="img/kingroy_instruments.jpg" type="image/jpeg">
+                    <img src="img/kingroy_instruments.jpg" class="card-img" alt="ассортимент инструментов kingroy">
+                </picture>
+                <!--<img src="img/kingroy_instruments.jpg" class="card-img" alt="ассортимент инструментов kingroy">-->
                 <div class="card-img-overlay">
                     <div class="container">
                         <div class="row text-center">
