--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <meta property="og:url"
+        content="http://kingroy.com.ua" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="KING ROY | Официальный представитель в Украине" />
+    <meta property="og:description" content="Профессиональный инструмент KING ROY и оборудование для автосервиса. Официальный представитель в Украине. Широкий ассортимент. Инструмент для СТО. Низкие цены, высокое качество." />
+    <meta property="og:image"
+        content="http://dluga.github.io/img/kingroy_instruments.jpg" />
 </head>
 
 <body>
