--- a/index.html
+++ b/index.html
@@ -34,12 +34,19 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <meta property="og:url" content="https://dluga.github.io" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="KING ROY | Официальный представитель в Украине" />
+    <meta property="og:description"
+        content="Профессиональный инструмент KING ROY и оборудование для автосервиса. Официальный представитель в Украине. Широкий ассортимент. Инструмент для СТО. Низкие цены, высокое качество." />
+    <meta property="og:image" content="https://dluga.github.io/img/kingroy_instruments.jpg" />
+    <meta property="fb:app_id" content="2419791054919668" />
     <!-- Facebook Pixel Code -->
     <script>
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
@@ -53,12 +60,17 @@
     <noscript><img height="1" width="1" style="display:none"
             src="https://www.facebook.com/tr?id=868706756838992&ev=PageView&noscript=1" /></noscript>
     <!-- End Facebook Pixel Code -->
-    <meta property="og:url" content="https://dluga.github.io" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="KING ROY | Официальный представитель в Украине" />
-    <meta property="og:description"
-        content="Профессиональный инструмент KING ROY и оборудование для автосервиса. Официальный представитель в Украине. Широкий ассортимент. Инструмент для СТО. Низкие цены, высокое качество." />
-    <meta property="og:image" content="https://dluga.github.io/img/kingroy_instruments.jpg" />
+    <!-- Data types -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Organization",
+            "name": "King Roy",
+            "url": "http://kingroy.com.ua",
+            "logo": "http://kingroy.com.ua/img/kingroy_logo.png",
+            "email": "info.kingroy@gmail.com"
+        }
+    </script>
 </head>
 
 <body>
@@ -280,16 +292,7 @@
         </div>
     </div>
 
-    <script type="application/ld+json">
-        {
-            "@context": "https://schema.org",
-            "@type": "Organization",
-            "name": "King Roy",
-            "url": "http://kingroy.com.ua",
-            "logo": "http://kingroy.com.ua/img/kingroy_logo.png",
-            "email": "info.kingroy@gmail.com"
-        }
-    </script>
+    
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
