--- a/index.html
+++ b/index.html
@@ -133,10 +133,14 @@
                 <div class="card-img-overlay">
                     <div class="container">
                         <div class="row text-center">
-                            <div
+                            <h1
                                 class="col-md-12 col-sm-12 col-xs-12 pt-md-5 pb-4 oranged_color border_bottom_2 display-4 top_banner black_text_shadow font-weight-bold">
                                 ИНСТРУМЕНТ ДЛЯ ПРОФЕССИОНАЛОВ
-                            </div>
+                            </h1>
+                            <!--<div
+                                class="col-md-12 col-sm-12 col-xs-12 pt-md-5 pb-4 oranged_color border_bottom_2 display-4 top_banner black_text_shadow font-weight-bold">
+                                ИНСТРУМЕНТ ДЛЯ ПРОФЕССИОНАЛОВ
+                            </div>-->
                         </div>
                         <div class="col-md-12 col-sm-12 col-xs-12 ml-5 d-none d-md-block d-xl-block">
                             <a href="pdf/Katalog King_Roy.pdf"
@@ -151,9 +155,12 @@
     </div>
 
     <div class="row text-center">
-        <div class="col border_top_5 h5 py-4 my-auto text-light" style="background-color:black" id="middle_banner_text">
-            <span class="oranged_color" id="main_description">KING ROY</span> - ИЗВЕСТНЫЙ МИРОВОЙ БРЕНД, ПРОИЗВЕДЕННЫЙ В
-            ТАЙВАНЕ.
+        <div class="col border_top_5 py-4 my-auto text-light" style="background-color:black" id="middle_banner_text">
+            <h5>
+                <span class="oranged_color" id="main_description">KING ROY</span> - ИЗВЕСТНЫЙ МИРОВОЙ БРЕНД,
+                ПРОИЗВЕДЕННЫЙ В
+                ТАЙВАНЕ.
+            </h5>
         </div>
     </div>
 
@@ -292,7 +299,7 @@
         </div>
     </div>
 
-    
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
