--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>KING ROY | Официальный представитель в Украине</title>
     <meta name="description"
         content="Профессиональный инструмент KING ROY и оборудование для автосервиса. Официальный представитель в Украине. Широкий ассортимент. Инструмент для СТО. Низкие цены, высокое качество.">
-    <meta name="keywords" content="King Roy">
+    <meta name="keywords" content="kingroy">
     <!-- Google Tag Manager -->
     <script>
         (function (w, d, s, l, i) {
