Replace images format from png to jpg

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             "@type": "Organization",
             "name": "King Roy",
             "url": "http://kingroy.com.ua",
-            "logo": "http://kingroy.com.ua/img/kingroy_logo.png",
+            "logo": "http://kingroy.com.ua/img/kingroy_logo.jpg",
             "email": "info.kingroy@gmail.com"
         }
     </script>
@@ -112,7 +112,7 @@
                     PROFESSIONAL TOOLS</div>
             </div>
             <div class="col-lg-2 col-md-2 col-sm-2 col px-0 text-center">
-                <img src="./img/kingroy_logo.png" class="img-fluid" alt="логотип kingroy">
+                <img src="./img/kingroy_logo.jpg" class="img-fluid" alt="логотип kingroy">
             </div>
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 px-0">
                 <div class="col-md-12 h3 bg-secondary pl-4 py-2 text-left d-none d-sm-block" id="header_right_text">
