--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             бренда<i class="fas fa-angle-double-right px-2 oranged_color"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a href="pdf/Katalog King_Roy.pdf" class="nav-link pr-0 oranged_color font-weight-bold bg-dark"
+                        <a href="catalog/index.html" class="nav-link pr-0 oranged_color font-weight-bold bg-dark"
                             target="_blank">Каталог инструментов<i
                                 class="fas fa-angle-double-right px-2 oranged_color"></i></a>
                     </li>
