Add catalog dropdown menu to navbar

--- a/index.html
+++ b/index.html
@@ -91,10 +91,17 @@
                             class="nav-link pr-0 oranged_color font-weight-bold bg-dark">Описание
                             бренда<i class="fas fa-angle-double-right px-2 oranged_color"></i></a>
                     </li>
-                    <li class="nav-item">
-                        <a href="catalog/index.html" class="nav-link pr-0 oranged_color font-weight-bold bg-dark"
-                            target="_blank">Каталог инструментов<i
-                                class="fas fa-angle-double-right px-2 oranged_color"></i></a>
+                    <li class="nav-item dropdown">
+                        <!--<a href="catalog/index.html" class="nav-link pr-0 oranged_color font-weight-bold bg-dark"
+                            target="_blank">Каталог<i class="fas fa-angle-double-right px-2 oranged_color"></i></a> -->
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Каталог
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="catalog/index.html" target="_blank">Переглянути</a>
+                            <a class="dropdown-item" href="pdf/Katalog King_Roy.pdf" target="_blank">Завантижити</a>
+                        </div>
                     </li>
                     <li class="nav-item">
                         <a href="#footer" class="nav-link pr-0 oranged_color font-weight-bold bg-dark">Контакты<i
