Update catalog link for download

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="catalog/index.html" target="_blank">Переглянути</a>
-                            <a class="dropdown-item" href="pdf/Katalog King_Roy.pdf" target="_blank">Завантижити</a>
+                            <a class="dropdown-item" href="pdf/Katalog King_Roy.pdf" download="Katalog King_Roy.pdf">Завантижити</a>
                         </div>
                     </li>
                     <li class="nav-item">
